validation changes 1